[package]
name = "invaderse"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
rand = "0.9.2"
hecs = "0.10.5"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
